--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -18,12 +18,14 @@
                 background-repeat: no-repeat;
                 background-position: center;
                 height: 100%;
+                min-height: 200px;
                 /* background-attachment: fixed; */
                 }    
         </style>
 </head>
 
 <body>
+    
 
     <header class="bg-dark">
         <div class="container py-5">
@@ -345,7 +347,7 @@
         distance:'200px',
         duration:1000,
         interval: 200 ,
-        reset:true,
+    // reset:true,
         // scale:0.4 ,
     });
             ScrollReveal().reveal('.project-section:nth-child(even)',{
@@ -354,7 +356,7 @@
         distance:'200px',
         duration:1000,
         interval: 200 ,
-        reset:true,
+        // reset:true,
         // scale:0.4 ,
        });
         </script>
